tagging forked by information

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -5,6 +5,7 @@
 # |_|   |_|\___\___/|_| |_| |_| 
 #                               
 # by Stephan Raabe (2023) 
+# Forked by Corrie Tilcock (10/2023)
 # ----------------------------------------------------- 
 
 #################################
