--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -6,6 +6,7 @@
 #                   |___/            
 #  
 # by Stephan Raabe (2023) 
+# Forked by Corrie Tilcock (10/2023)
 # ----------------------------------------------------- 
 #
 # ===================================================================
