--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -5,6 +5,7 @@
 # /_/   \_\_|\__,_|\___|_|  |_|\__|\__|\__, | 
 #                                      |___/   
 # by Stephan Raabe (2023) 
+# Forked by Corrie Tilcock (10/2023)
 # ----------------------------------------------------- 
 #
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
