--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,6 +6,7 @@
 #        |___/|_|                              
 #  
 # by Stephan Raabe (2023) 
+# Forked by Corrie Tilcock (10/2023)
 # ----------------------------------------------------- 
 
 # ----------------------------------------------------- 
