--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -6,6 +6,7 @@
 ;               |___/                   
 ;  
 ; by Stephan Raabe (2023) 
+; Forked by Corrie Tilcock (10/2023)
 ; ----------------------------------------------------- 
 ; Icons: https://fontawesome.com/search?o=r&m=free
 
