--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -9,7 +9,7 @@ bind = $mainMod, Q, killactive
 bind = $mainMod, M, fullscreen
 bind = $mainMod, F, exec, thunar
 #bind = $mainMod, F, exec, dolphin
-bind = $mainMod, T, togglefloating
+bind = $mainMod, V, togglefloating
 bind = $mainMod, B, exec, brave
 bind = $mainMod CTRL, B, exec, chromium
 bind = $mainMod, J, togglesplit
