--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -16,3 +16,4 @@ exec-once = nm-applet --indicator
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = xhost +local: # fixes Invalid MIT-MAGIC-COOKIE-1 keyError: cannot open display ':0'
