--- a/hypr/conf/environment.conf
+++ b/hypr/conf/environment.conf
@@ -6,3 +6,18 @@ env = WLR_NO_HARDWARE_CURSORS, 1
 env = WLR_RENDERER_ALLOW_SOFTWARE, 1
 env = XCURSOR_SIZE,24
 env = GTK_THEME,Adwaita:dark
+env = XDG_SESSION_TYPE,wayland
+
+
+#------------------------------------------------------
+# NVIDIA Specific Config
+#------------------------------------------------------
+env = __NV_PRIME_RENDER_OFFLOAD,1
+env = __NV_PRIME_RENDER_OFFLOAD_PROVIDER,NVIDIA-G0
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __VK_LAYER_NV_optimus,NVIDIA_only
+env = LIBVA_DRIVER_NAME,nvidia
+#env = GBM_BACKEND,nvidia-drm
+
+
+
