--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,6 +44,7 @@ source = ~/dotfiles/hypr/conf/layouts.conf
 source = ~/dotfiles/hypr/conf/misc.conf
 source = ~/dotfiles/hypr/conf/keybindings.conf
 source = ~/dotfiles/hypr/conf/windowrules.conf
+source = ~/dotfiles/hypr/conf/nvidia.conf
 
 # ----------------------------------------------------- 
 # Animation
