--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,7 +21,8 @@ $keyboardlayout=gb
 # ----------------------------------------------------- 
 # monitor=,3840x1080@144,auto,1
 # monitor=,2560x1440@120,auto,1
-monitor=,1920x1080@144,auto,1
+# monitor=,1920x1080@144,auto,1
+monitor=,preferred,auto,1
 
 # ----------------------------------------------------- 
 # Autostart & Environment
