add waybar microphone item

--- a/waybar/themes/ml4w/config
+++ b/waybar/themes/ml4w/config
@@ -51,6 +51,7 @@
     // Modules Right    
     "modules-right": [
         "custom/updates",
+        "pulseaudio#microphone",
         "pulseaudio",
         "bluetooth",
         "battery", 
