--- a/hypr/conf/nvidia.conf
+++ b/hypr/conf/nvidia.conf
@@ -1,8 +1,7 @@
-
 #------------------------------------------------------
 # NVIDIA Specific Config - Enable/Disable as required -
 # 
-# Install qt5-wayland, qt6-wayland, qt5ct, qt6ct and libva.
+# Install qt6-wayland, qt6-wayland, qt6ct, qt6ct and libva.
 #
 # Additionally libva-nvidia-driver-git (AUR) to fix crashes in some Electron-based applications, such as Unity Hub.
 #
@@ -23,10 +22,10 @@
 # I enable 1,2,3,4,5 for my 1650 ti
 #
 #------------------------------------------------------
-#env = __NV_PRIME_RENDER_OFFLOAD,1			# 1
-#env = __NV_PRIME_RENDER_OFFLOAD_PROVIDER,NVIDIA-G0	# 2
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia			# 3
-#env = __VK_LAYER_NV_optimus,NVIDIA_only		# 4
-#env = LIBVA_DRIVER_NAME,nvidia				# 5
+env = __NV_PRIME_RENDER_OFFLOAD,1			# 1
+env = __NV_PRIME_RENDER_OFFLOAD_PROVIDER,NVIDIA-G0	# 2
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia			# 3
+env = __VK_LAYER_NV_optimus,NVIDIA_only	s		# 4
+env = LIBVA_DRIVER_NAME,nvidia				# 5
 #env = GBM_BACKEND,nvidia-drm				# 6
 
