--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -13,7 +13,7 @@ exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 exec-once = ~/dotfiles/waybar/launch.sh
 exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet --indicator
-exec-once = bluez-applet
+exec-once = blueman-applet
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
