--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -3,13 +3,11 @@
 # ----------------------------------------------------- 
 
 exec-once = swww init 
-# exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst
 exec-once = ~/dotfiles/scripts/lockscreentime.sh
 exec-once = ~/dotfiles/scripts/updatewal-swww.sh
 exec-once = ~/dotfiles/gtk/gtk.sh
-exec-once = hyprctl setcursor Bibata-Modern-Ice 24
+exec-once = hyprctl setcursor Adwaita 24
 exec-once = ~/dotfiles/waybar/launch.sh
 exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet --indicator
@@ -18,3 +16,5 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = xhost +local: # fixes Invalid MIT-MAGIC-COOKIE-1 keyError: cannot open display ':0'
+exec-once = cat ~/.cache/wal/colors.Xresources > ~/.Xresources # Update XXresources file with latest wal colours
+
