--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -74,3 +74,14 @@ bind = $mainMod, P, submap, passthru
 submap = passthru
 bind = SUPER, Escape, submap, reset
 submap = reset
+
+# ----------------------------------------------------- 
+# Pyprland keybinds
+# ----------------------------------------------------- 
+
+bind = $mainMod CTRL, Z, exec, pypr btop
+bind = $mainMod CTRL, A, exec, pypr toggle term
+
+
+
+
