--- a/hypr/conf/environment.conf
+++ b/hypr/conf/environment.conf
@@ -5,6 +5,6 @@
 env = WLR_NO_HARDWARE_CURSORS, 1
 env = WLR_RENDERER_ALLOW_SOFTWARE, 1
 env = XCURSOR_SIZE,24
-#env = GTK_THEME,Adwaita:dark # set defualt GTK theme here
+env = GTK_THEME,Arc-Azure-dodger-blue:dark # set defualt GTK theme here
 env = XDG_SESSION_TYPE,wayland
 
