--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -5,6 +5,7 @@
 
 exec-once = swww init 
 exec-once = dunst
+#exec-once = ~/dotfiles/scripts/octopi.sh
 exec-once = ~/dotfiles/scripts/lockscreentime.sh
 exec-once = ~/dotfiles/scripts/updatewal-swww.sh
 exec-once = ~/dotfiles/gtk/gtk.sh
@@ -18,5 +19,6 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = xhost +local: # fixes Invalid MIT-MAGIC-COOKIE-1 keyError: cannot open display ':0'
 exec-once = cat ~/.cache/wal/colors.Xresources > ~/.Xresources # Update Xresources file with latest wal colours
+
 
 
