--- a/waybar/themes/ml4w/config
+++ b/waybar/themes/ml4w/config
@@ -39,6 +39,7 @@
         "custom/cliphist",
         "group/quicklinks",
         "custom/wf-recorder",
+        "custom/keybindings",
         "wlr/taskbar",
         "hyprland/window"
     ],
