--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -82,6 +82,13 @@ submap = reset
 bind = $mainMod CTRL, Z, exec, pypr btop
 bind = $mainMod CTRL, A, exec, pypr toggle term
 
+# ----------------------------------------------------- 
+# Application keybinds
+# -----------------------------------------------------
+
+bind = $mainMod CTRL, U, exec, pavucontrol
+bind = $mainMod CTRL, P, exec, pamac-manager  
+
 
 
 
