--- a/hypr/conf/nvidia.conf
+++ b/hypr/conf/nvidia.conf
@@ -25,7 +25,7 @@
 #env = __NV_PRIME_RENDER_OFFLOAD,1			# 1
 #env = __NV_PRIME_RENDER_OFFLOAD_PROVIDER,NVIDIA-G0	# 2
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia			# 3
-#env = __VK_LAYER_NV_optimus,NVIDIA_only	s		# 4
+#env = __VK_LAYER_NV_optimus,NVIDIA_only		# 4
 #env = LIBVA_DRIVER_NAME,nvidia				# 5
 #env = GBM_BACKEND,nvidia-drm				# 6
 
