sddm update scripts

--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -7,3 +7,6 @@ windowrule = tile,^(Brave-browser)$
 windowrule = tile,^(Chromium)$
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
+
+# Specific to launching floating terminal windows
+windowrulev2 = float, class:floating
