--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,10 +19,10 @@ $keyboardlayout=gb
 # Monitor Setup
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # ----------------------------------------------------- 
-# monitor=,3840x1080@144,auto,1
+monitor=,3840x1080@144,auto,1
 # monitor=,2560x1440@120,auto,1
 # monitor=,1920x1080@144,auto,1
-monitor=,preferred,auto,1
+# monitor=,preferred,auto,1
 
 # ----------------------------------------------------- 
 # Autostart & Environment
