--- a/sddm/sddm.conf
+++ b/sddm/sddm.conf
@@ -37,7 +37,7 @@ RebootCommand=/usr/bin/systemctl reboot
 
 [Theme]
 # Current theme name
-Current=sugar-candy
+Current=Sugar-Candy
 
 # Cursor size used in the greeter
 CursorSize=24
