--- a/hypr/conf/layouts.conf
+++ b/hypr/conf/layouts.conf
@@ -8,13 +8,14 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
     workspace_swipe = false
 }
 
-device:epic-mouse-v1 {
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
