script update changed for new year

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,8 +4,7 @@
 # |  __/| | (_| (_) | | | | | | 
 # |_|   |_|\___\___/|_| |_| |_| 
 #                               
-# by Stephan Raabe (2023) 
-# Forked by Corrie Tilcock (10/2023)
+# by Corrie Tilcock (2024)
 # ----------------------------------------------------- 
 
 #################################
