--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -5,8 +5,7 @@
 ; |_|   \___/|_|\__, |_.__/ \__,_|_|    
 ;               |___/                   
 ;  
-; by Stephan Raabe (2023) 
-; Forked by Corrie Tilcock (10/2023)
+; by Corrie Tilcock (2024)
 ; ----------------------------------------------------- 
 ; Icons: https://fontawesome.com/search?o=r&m=free
 
