--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,8 +4,7 @@
 #  / ___ \| | (_| | (__| |  | | |_| |_| |_| | 
 # /_/   \_\_|\__,_|\___|_|  |_|\__|\__|\__, | 
 #                                      |___/   
-# by Stephan Raabe (2023) 
-# Forked by Corrie Tilcock (10/2023)
+# by Corrie Tilcock (2024)
 # ----------------------------------------------------- 
 #
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
