--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,8 +5,7 @@
 # |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_| 
 #        |___/|_|                              
 #  
-# by Stephan Raabe (2023) 
-# Forked by Corrie Tilcock (10/2023)
+# by Corrie Tilcock (2024)
 # ----------------------------------------------------- 
 
 # ----------------------------------------------------- 
