--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -5,8 +5,7 @@
 # |_| \_\__,_|_| |_|\__, |\___|_|    
 #                   |___/            
 #  
-# by Stephan Raabe (2023) 
-# Forked by Corrie Tilcock (10/2023)
+# by Corrie Tilcock (2024)
 # ----------------------------------------------------- 
 #
 # ===================================================================
