--- a/swaylock/config
+++ b/swaylock/config
@@ -5,8 +5,7 @@
 # |____/ \_/\_/ \__,_|\__, |_|\___/ \___|_|\_\ 
 #                     |___/                    
 #  
-# by Stephan Raabe (2023) 
-# Forked by Corrie Tilcock (10/2023)
+# by Corrie Tilcock (2024)
 # ----------------------------------------------------- 
 
 ignore-empty-password
