--- a/hypr/conf/decoration.conf
+++ b/hypr/conf/decoration.conf
@@ -1,9 +1,14 @@
 # ----------------------------------------------------- 
 # General window decoration
+# name: "Default"
 # ----------------------------------------------------- 
 
 decoration {
-    rounding = 5
+    rounding = 10
+    active_opacity = 1.0
+    inactive_opacity = 0.8
+    fullscreen_opacity = 1.0
+
     blur {
         enabled = true
         size = 6
@@ -13,12 +18,11 @@ decoration {
         xray = true
         # blurls = waybar
     }
-    active_opacity = 1.0
-    inactive_opacity = 0.5
-    fullscreen_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 30
-    shadow_render_power = 3
-    col.shadow = 0x66000000
+    shadow {
+        enabled = true
+        range = 30
+        render_power = 3
+        color = 0x66000000
+    }
 }
