--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -2,11 +2,11 @@
 # Window rules
 # ----------------------------------------------------- 
 
-windowrule = tile,^(Microsoft-edge)$
-windowrule = tile,^(Brave-browser)$
-windowrule = tile,^(Chromium)$
-windowrule = float,^(pavucontrol)$
-windowrule = float,^(blueman-manager)$
+windowrule = tile,title:(^(Microsoft-edge)$)
+windowrule = tile,title:(^(Brave-browser)$)
+windowrule = tile,title:(^(Chromium)$)
+windowrule = tile,title:(^(pavucontrol)$)
+windowrule = tile,title:(^(blueman-manager)$)
 
 # Specific to launching floating terminal windows
 windowrulev2 = float, class:floating
