--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -2,11 +2,40 @@
 # Window rules
 # ----------------------------------------------------- 
 
-windowrule = tile,title:(^(Microsoft-edge)$)
-windowrule = tile,title:(^(Brave-browser)$)
-windowrule = tile,title:(^(Chromium)$)
-windowrule = tile,title:(^(pavucontrol)$)
-windowrule = tile,title:(^(blueman-manager)$)
+windowrule {
+  name = windowrule-1
+  tile = on
+  match:title = (^(Microsoft-edge)$)
+}
+
+windowrule {
+  name = windowrule-2
+  tile = on
+  match:title = (^(Brave-browser)$)
+}
+
+windowrule {
+  name = windowrule-3
+  tile = on
+  match:title = (^(Chromium)$)
+}
+
+windowrule {
+  name = windowrule-4
+  tile = on
+  match:title = (^(pavucontrol)$)
+}
+
+windowrule {
+  name = windowrule-5
+  tile = on
+  match:title = (^(blueman-manager)$)
+}
+
 
 # Specific to launching floating terminal windows
-windowrulev2 = float, class:floating
+windowrule {
+  name = windowrule-6
+  float = on
+  match:class = floating
+}
