--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
-folder = ~/.config/ml4w/wallpapers
-wallpaper = ~/.config/ml4w/wallpapers/default.jpg
+folder = ~/.config/Pictures/Wallpapers
+wallpaper = ~/.config/Pictures/Wallpapers/default.jpg
 backend = swww
 monitors = All
 fill = fill
