--- a/hypr/conf/window.conf
+++ b/hypr/conf/window.conf
@@ -6,8 +6,8 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 3
-    #col.active_border = @color11
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = $color11
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     resize_on_border = false
     allow_tearing = false
