--- a/gtk/gtk-4.0/settings.ini
+++ b/gtk/gtk-4.0/settings.ini
@@ -1,4 +1,7 @@
 [Settings]
+gtk-theme-name=Arc-Azure-dodger-blue-Darker
 gtk-icon-theme-name=Papirus-Dark
-gtk-cursor-theme-name=Adwaita
-gtk-application-prefer-dark-theme=true
+gtk-font-name=Cantarell 10
+gtk-cursor-theme-name=Bibata-Modern-Classic-Right
+gtk-cursor-theme-size=24
+gtk-application-prefer-dark-theme=1
