--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
-folder = ~/.config/Pictures/Wallpapers
-wallpaper = ~/dotfiles/wallpapers/default.jpg
+folder = ~/Pictures/Wallpapers
+wallpaper = ~/dotfiles/Wallpapers/default.jpg
 backend = swww
 monitors = All
 fill = fill
@@ -23,5 +23,5 @@ all_subfolders = False
 zen_mode = False
 mpvpaper_sound = False
 mpvpaper_options = 
-stylesheet = /home/test/.config/waypaper/style.css
+stylesheet = ~/.cache/wal/style.css
 
