--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/Pictures/Wallpapers
-wallpaper = ~/dotfiles/Wallpapers/default.jpg
+wallpaper = ~/Pictures/Wallpapers/25.jpg
 backend = swww
 monitors = All
 fill = fill
