--- a/waybar/themes/config
+++ b/waybar/themes/config
@@ -1,12 +1,13 @@
-// __        __          _                 
-// \ \      / /_ _ _   _| |__   __ _ _ __  
-//  \ \ /\ / / _` | | | | '_ \ / _` | '__| 
-//   \ V  V / (_| | |_| | |_) | (_| | |    
-//    \_/\_/ \__,_|\__, |_.__/ \__,_|_|    
-//                 |___/                   
-//  
-// by Stephan Raabe (2023) 
-// Forked by Corrie Tilcock (10/2023)
+//  ██       ██                    ██
+// ░██      ░██            ██   ██░██
+// ░██   █  ░██  ██████   ░░██ ██ ░██       ██████   ██████
+// ░██  ███ ░██ ░░░░░░██   ░░███  ░██████  ░░░░░░██ ░░██░░█
+// ░██ ██░██░██  ███████    ░██   ░██░░░██  ███████  ░██ ░
+// ░████ ░░████ ██░░░░██    ██    ░██  ░██ ██░░░░██  ░██
+// ░██░   ░░░██░░████████  ██     ░██████ ░░████████░███
+// ░░       ░░  ░░░░░░░░  ░░      ░░░░░    ░░░░░░░░ ░░░
+//
+// by Sproggy (Corrie Tilcock) (2026)
 // ----------------------------------------------------- 
 //
 {
