--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -23,5 +23,5 @@ all_subfolders = False
 zen_mode = False
 mpvpaper_sound = False
 mpvpaper_options = 
-stylesheet = ~/.cache/wal/style.css
+stylesheet = ~/.cache/wal/colour.css
 
