--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -21,7 +21,7 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, PRINT, exec, ~/dotfiles/scripts/grim.sh
-bind = $mainMod CTRL, Q, exec, wlogout
+bind = $mainMod CTRL, Q, exec, ~/dotfiles/hyprlogout/logout.sh
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/scripts/updatewal-swww.sh
 bind = $mainMod CTRL, W, exec, ~/dotfiles/scripts/wallpaper-swww.sh
 bind = $mainMod CTRL, RETURN, exec, ~/dotfiles/scripts/applauncher.sh
