--- a/hypr/conf/window.conf
+++ b/hypr/conf/window.conf
@@ -3,12 +3,11 @@
 # ----------------------------------------------------- 
 
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 3
+    gaps_out = 6
     border_size = 3
-    col.active_border = $color11
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $color11 $color4 45deg # Default colors col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = $color8 # Default colors col.inactive_border = rgba(595959aa)
     resize_on_border = false
     allow_tearing = false
     layout = dwindle
