--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -4,7 +4,7 @@ folder = ~/Pictures/Wallpapers
 wallpaper = ~/dotfiles/Wallpapers/default.jpg
 backend = swww
 monitors = All
-fill = fill
+fill = center
 sort = name
 color = #ffffff
 subfolders = False
