--- a/hypr/conf/keybindings.conf
+++ b/hypr/conf/keybindings.conf
@@ -1,5 +1,14 @@
 # ----------------------------------------------------- 
-# Key bindings
+#
+# ██   ██                  ██      ██               ██ ██
+#░██  ██           ██   ██░██     ░░               ░██░░            █████
+#░██ ██    █████  ░░██ ██ ░██      ██ ███████      ░██ ██ ███████  ██░░░██  ██████
+#░████    ██░░░██  ░░███  ░██████ ░██░░██░░░██  ██████░██░░██░░░██░██  ░██ ██░░░░
+#░██░██  ░███████   ░██   ░██░░░██░██ ░██  ░██ ██░░░██░██ ░██  ░██░░██████░░█████
+#░██░░██ ░██░░░░    ██    ░██  ░██░██ ░██  ░██░██  ░██░██ ░██  ░██ ░░░░░██ ░░░░░██
+#░██ ░░██░░██████  ██     ░██████ ░██ ███  ░██░░██████░██ ███  ░██  █████  ██████
+#░░   ░░  ░░░░░░  ░░      ░░░░░   ░░ ░░░   ░░  ░░░░░░ ░░ ░░░   ░░  ░░░░░  ░░░░░░
+# by Sproggy (Corrie Tilcock) (2026)
 # ----------------------------------------------------- 
 
 $mainMod = SUPER
