--- a/swaylock/config
+++ b/swaylock/config
@@ -1,11 +1,15 @@
-#  ____                     _            _     
-# / ___|_      ____ _ _   _| | ___   ___| | __ 
-# \___ \ \ /\ / / _` | | | | |/ _ \ / __| |/ / 
-#  ___) \ V  V / (_| | |_| | | (_) | (__|   <  
-# |____/ \_/\_/ \__,_|\__, |_|\___/ \___|_|\_\ 
-#                     |___/                    
-#  
-# by Corrie Tilcock (2024)
+#
+#
+#  ████████                                ██                  ██
+# ██░░░░░░                        ██   ██ ░██                 ░██
+#░██        ███     ██  ██████   ░░██ ██  ░██  ██████   █████ ░██  ██
+#░█████████░░██  █ ░██ ░░░░░░██   ░░███   ░██ ██░░░░██ ██░░░██░██ ██
+#░░░░░░░░██ ░██ ███░██  ███████    ░██    ░██░██   ░██░██  ░░ ░████
+#       ░██ ░████░████ ██░░░░██    ██     ░██░██   ░██░██   ██░██░██
+# ████████  ███░ ░░░██░░████████  ██      ███░░██████ ░░█████ ░██░░██
+#░░░░░░░░  ░░░    ░░░  ░░░░░░░░  ░░      ░░░  ░░░░░░   ░░░░░  ░░  ░░
+#
+# by Sproggy (Corrie Tilcock) (2026)
 # ----------------------------------------------------- 
 
 ignore-empty-password
@@ -20,7 +24,7 @@ datestr=%a, %e of %B
 
 # Add an image as a background 
 # In my setup the current wallpaper (requires wallpaper scripts in /scripts)
-image=~/.cache/current_wallpaper.jpg
+image=~/.cache/current_wallpaper.png
 
 # Fade in time
 fade-in=1
